# pdf-gemini

./: README.md
Backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/models/: database.py  models.py
Backend/pdfGPT/router/: router.py
Backend/pdfGPT/utils/: pdf_gpt.py  process_pdf.py  semantic_search.py
Backend/pdfGPT/views/: PDF_GPT.py
Backend/utils/: constants.py  env_vars.py
Backend/views/: routers.py
Frontend/: README.md  package.json
Frontend/app/: layout.tsx  page.tsx
Frontend/app/chat/[id]/: page.tsx
Frontend/src/: routes.tsx
Frontend/src/components/: MessageBox.tsx
Frontend/src/components/card/: Card.tsx
Frontend/src/components/fileInput/: FileInputModal.tsx
Frontend/src/components/icons/: Icons.tsx
Frontend/src/components/messages/: Messages.tsx
Frontend/src/components/sidebar/: Sidebar.tsx
Frontend/src/components/sidebar/components/: Content.tsx
Frontend/src/styles/: App.css
Frontend/src/types/: types.ts
