[project]
name = "pdfgpt-backend"
version = "0.0.1"
description = "PDF GPT Backend"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
]

[tool.setuptools]
packages = ["pdfGPT", "utils"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = []
python_files = ["test_*.py"]
python_classes = ["*Tests", "Test*"]
python_functions = ["test_*"]
